[gd_scene load_steps=2 format=3 uid="uid://18fyovviby8b"]

[ext_resource type="Script" uid="uid://cx4rw7ovoko" path="res://ui/AppExplorer/AppFileExplorer.gd" id="1_ih638"]

[node name="AppFileExplorer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ih638")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PathLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UpButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "↑"

[node name="ItemList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContextMenu" type="PopupMenu" parent="."]
item_count = 1
item_0/text = "パスをコピー"
item_0/id = 1
